tring to make the navbar larger when on iphone -fix image height- v6

--- a/static/style.css
+++ b/static/style.css
@@ -126,6 +126,7 @@ table {
         max-width:3.9em;
         padding-left: 0px;
         padding-right: 0px;
+        height: auto;
     }
 }
 
